Simple fix for "flickering hover" on "examensklassen"

--- a/css/main.css
+++ b/css/main.css
@@ -1999,6 +1999,7 @@ i {
   left: 0;
   max-width: 100%;
   max-height: 100%;
+  border: 1px solid #32647f;
 }
 
 /* line 53, ../scss/components/_expanding-grid.scss */
