--- a/scss/components/_expanding-grid.scss
+++ b/scss/components/_expanding-grid.scss
@@ -47,7 +47,7 @@
   left: 0;
   max-width: 100%;
   max-height: 100%;
-
+	border: 1px solid $blue;
 }
 
 .og-grid li img.static {
